--- a/style.css
+++ b/style.css
@@ -4,18 +4,29 @@ body {
   padding: 30px;
   min-height: 100vh;
   background: #e0e7dc;
-  /* background-image: url('images/quizappbackground.jpg'); 
-  background-position: center;   */
+   direction: rtl;
+   background-image: url('images/quizappbackground.png');  
+  background-position: center;   
 /* background: linear-gradient(135deg, #40dad8, #c31d00); */
 }
-
+body::before {
+  content: "";
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0,0,0,0.4); /* 0.4 = شفافية لتعتيم الصورة */
+  z-index: -1;
+}
     .quiz-container {
       max-width: 700px;
       margin: auto;
       background: #fff;
       padding: 30px;
       border-radius: 12px;
-      box-shadow: 0 8px 20px rgba(0,0,0,0.1);
+      box-shadow: 0 8px 20px rgba(0,0,0,5);
+       /* border: 6px solid black; */
     }
 
     .quiz-title {
@@ -25,7 +36,7 @@ body {
       color: #333;
     }
 
-    .question-block {
+    .question-div {
       margin-bottom: 25px;
       padding-bottom: 15px;
       border-bottom: 1px solid #ddd;
@@ -41,12 +52,9 @@ body {
       margin-bottom: 10px;
     }
 
-    .options {
-      display: flex;
-      flex-direction: column;
-    }
+  
 
-  .options label {
+.options label {
   display: block;
   padding: 8px 12px;
   margin-bottom: 8px;
@@ -56,12 +64,25 @@ body {
   transition: background 0.3s;
 }
 
-.options label:hover {
-  background-color: #d0e6fa;
+.options {
+  display: flex;
+  align-items: center; 
+  justify-content: flex-start;
+  gap: 10px; 
+  margin-bottom: 8px;
+  padding: 8px 12px;
+  background-color: #f0f4f8;
+  border-radius: 8px;
+  cursor: pointer;
+  transition: background 0.3s;
+}
+
+.options:hover {
+  background-color: #00000061;
 }
 
 .options input[type="radio"] {
-  margin-right: 10px; 
+  margin-left: 8px;
 }
 
 
@@ -74,7 +95,7 @@ body {
       display: block;
       width: 100%;
       padding: 15px;
-background: #006905;
+background: #000000;
   color: white;
       font-size: 18px;
       border: none;
@@ -85,7 +106,24 @@ background: #006905;
     }
 
     .submit-btn:hover {
-background: #00690571;
+background: #0000004d;
+  }
+  #clear-btn {
+      display: block;
+      width: 100%;
+      padding: 15px;
+background: #000000;
+  color: white;
+      font-size: 18px;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      margin-top: 20px;
+      transition: all 0.3s ease;
+    }
+
+    #clear-btn:hover {
+background: #0000004d;
   }
 
     .result {
